Bug 505934 - Installed scripts can't register screen edge listeners
Summary: Installed scripts can't register screen edge listeners
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scripting (other bugs)
Version First Reported In: 6.4.0
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-06-21 18:30 UTC by fin444_dev
Modified: 2025-06-26 02:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fin444_dev 2025-06-21 18:30:00 UTC
SUMMARY
After upgrading to 6.4.0, Kwin scripts requesting readConfig("BorderActivate", "") now receive "" instead of a usable value (on my system running 6.3.5, at least, this was "0"). This means that scripts cannot register screen edge listeners, at least as far as I am able to determine. (The documentation on this is very sparse.)

The included Minimize All plugin still works correctly, but if I make an exact copy of it (changing the script ID and nothing else) and install that manually, it is no longer able to register a listener.

STEPS TO REPRODUCE
1. Run a Kwin script with the following code:
> console.log(readConfig("BorderActivate", ""))
2. Observe the log output

Alternatively:
1. Install https://www.pling.com/p/2136524/
2. Enable the script
3. Go to screen edge listener settings, and notice that it is not one of the available options

OBSERVED RESULT
There is (to my understanding) no mechanism for installed scripts to register screen edge listeners.

EXPECTED RESULT
The old method (from 6.3 and below) should be fixed, or a new method should be documented.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: NixOS unstable 25.11 (commit 08f22084e608)
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Comment 1 Vlad Zahorodnii 2025-06-23 09:48:19 UTC
> The old method (from 6.3 and below) should be fixed, or a new method should be documented.

It's an oversight after kwin_x11 and kwin_wayland split.
Comment 2 Bug Janitor Service 2025-06-23 09:49:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7802
Comment 3 Vlad Zahorodnii 2025-06-23 12:07:17 UTC
Git commit 3128ad88eec00a6c367cd1df75a84288d06d87eb by Vlad Zahorodnii.
Committed on 23/06/2025 at 11:24.
Pushed by vladz into branch 'master'.

kcms/screenedges: Fix listing third party extensions

It's an oversight after kwin_x11 and kwin_wayland split.

M  +4    -3    src/kcms/screenedges/main.cpp
M  +5    -3    src/kcms/screenedges/touch.cpp

https://invent.kde.org/plasma/kwin/-/commit/3128ad88eec00a6c367cd1df75a84288d06d87eb
Comment 4 Vlad Zahorodnii 2025-06-23 12:43:33 UTC
Git commit 7c095a3c181bba3db5c41ebba3919c8dc9b55265 by Vlad Zahorodnii.
Committed on 23/06/2025 at 12:27.
Pushed by vladz into branch 'master'.

kcms/screenedges: Fix listing third party extensions

It's an oversight after kwin_x11 and kwin_wayland split.

M  +4    -3    src/kcms/screenedges/main.cpp
M  +5    -3    src/kcms/screenedges/touch.cpp

https://invent.kde.org/plasma/kwin-x11/-/commit/7c095a3c181bba3db5c41ebba3919c8dc9b55265
Comment 5 Vlad Zahorodnii 2025-06-23 12:55:54 UTC
Git commit 681a0d713281850379c49c4e0a06b2025b72db4a by Vlad Zahorodnii.
Committed on 23/06/2025 at 12:21.
Pushed by vladz into branch 'Plasma/6.4'.

kcms/screenedges: Fix listing third party extensions

It's an oversight after kwin_x11 and kwin_wayland split.


(cherry picked from commit 3128ad88eec00a6c367cd1df75a84288d06d87eb)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +4    -3    src/kcms/screenedges/main.cpp
M  +5    -3    src/kcms/screenedges/touch.cpp

https://invent.kde.org/plasma/kwin/-/commit/681a0d713281850379c49c4e0a06b2025b72db4a
Comment 6 Vlad Zahorodnii 2025-06-23 13:15:52 UTC
Git commit a52b7458def1f34bf1b01893ee5d06fd72e6bf04 by Vlad Zahorodnii.
Committed on 23/06/2025 at 12:43.
Pushed by vladz into branch 'Plasma/6.4'.

kcms/screenedges: Fix listing third party extensions

It's an oversight after kwin_x11 and kwin_wayland split.


(cherry picked from commit 7c095a3c181bba3db5c41ebba3919c8dc9b55265)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +4    -3    src/kcms/screenedges/main.cpp
M  +5    -3    src/kcms/screenedges/touch.cpp

https://invent.kde.org/plasma/kwin-x11/-/commit/a52b7458def1f34bf1b01893ee5d06fd72e6bf04