kcms/screenedges: Fix listing third party extensions

It's an oversight after kwin_x11 and kwin_wayland split.

BUG: 505934